--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -443,7 +443,7 @@ For each $k$, there are $\binom{2k-1}{k-1,k}(k-1)!k!$ such patterns, which are $
 \end{enumerate}
 \end{theorem*}
 	
-\cref{sec:shifts} is technical, devoted to the proof that the geometric $\SU$ diagonal is a topological enhancement of the original $\SU$ diagonal.
+\cref{sec:shifts} is technical, mostly devoted to the proof that the geometric $\SU$ diagonal is a topological enhancement of the original $\SU$ diagonal.
 
 \begin{theorem*}[\cref{thm:recover-SU}]
 	The original and geometric $\SU$ diagonals coincide. 
@@ -461,22 +461,23 @@ The above theorem also allows us to translate the different combinatorial descri
 	\begin{tabular}{c|c|c}
 	Description & $\SU$ diagonal & $\LA$ diagonal \\
 	\hline
-	Subset shifts & \cite{SaneblidzeUmble} & New \\
-	$(I,J)$ conditions & New & \cite{LaplanteAnfossi} \\
-	Path extrema & New & New \\
-	$1$-shifts & New & New \\
-	$m$-shifts & New & New \\
+	Subset shifts & \cite{SaneblidzeUmble} & \cref{def:classical-LA} \\
+	$(I,J)$ conditions & \cref{thm:minimal} & \cite{LaplanteAnfossi} \\
+	Path extrema & \cref{thm:facet-ordering} & \cref{thm:facet-ordering} \\
+	$1$-shifts & \cref{def:classical-SU} & \cref{def:classical-LA} \\
+	$m$-shifts & \cref{def:classical-SU} & \cref{def:classical-LA} \\
 	Lattice & New & New \\
 	Matrix & \cite{SaneblidzeUmble} & New \\
 	Cubical& \cite{SaneblidzeUmble} & New
 	\end{tabular}
 	\end{center}
 \end{figure}
+\Guillaume{Complete refs}
 
 In \cref{sec:Shift-lattice} we show that the facets of operadic diagonals admit a natural lattice structure that we call the \defn{shift lattice}.\Guillaume{@Kurt, do you want to highlight a feature of this lattice? Should we call it "cubical"?}
 We devote the last two subsections of \cref{sec:shifts} to the representation of the facets of operadic diagonals as matrices, and as pairs of subcubes in a cubical representation of the permutahedra.
 Both of these descriptions come from \cite{SaneblidzeUmble}.
-Along the way, we present proofs of some results\Guillaume{Cite them here} that were presented there as facts.
+Along the way, we provide proofs of some results\Guillaume{Cite them here} that were presented there as facts.
 
 %%%%%%%%%%%%%%%
 
