Small edits intro

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -302,7 +302,7 @@ This magical formula for the associahedra lead recently to new enumerative resul
 Building on the work of Masuda--Tonks--Thomas--Vallette, a general theory of topological cellular diagonals was developed in \cite{LaplanteAnfossi}.
 In particular, a combinatorial formula describing the image of the diagonal of any polytope was given \cite[Thm. 1.26]{LaplanteAnfossi}.
 The topological operad structure of \cite{MasudaThomasTonksVallette} on the associahedra was generalized to the family of operahedra, which comprise the family of permutahedra, and encode the notion of homotopy operad.
-Cellular diagonals of the operahedra do \emph{not} satisfy the magical formula, and the difficulty to describe combinatorially their image is what prompted the development of theory in \cite{LaplanteAnfossi}.
+Cellular diagonals of the operahedra do \emph{not} satisfy the magical formula, and the difficulty to describe combinatorially their image is what prompted the development of the theory in \cite{LaplanteAnfossi}.
 \begin{figure}[h!]
 \begin{center}
 \begin{tabular}{c|c}
@@ -312,13 +312,13 @@ Simplices, Cubes, Freehedra, Associahedra & Multiplihedra, Operahedra, Permutahe
 \end{tabular}
 \end{center}
 \end{figure}
-An important feature of the operahedra is that they are all obtained from the permutahedra by projection (they are generalized permutahedra in the sense of \cite{Postnikov}), and it turns out that to understand their diagonals, it suffices to understand operadic diagonals of permutahedra, which is the purpose of the present paper. 
+An important feature of the operahedra is that they are all obtained from the permutahedra by projection (they are generalized permutahedra in the sense of \cite{Postnikov}), and it was shown in \cite[Sec. 1.6]{LaplanteAnfossi} that to understand their diagonals, it suffices to understand operadic diagonals of permutahedra, which is the purpose of the present paper. 
 
 The first cellular diagonal of the permutahedra was obtained at the algebraic level by Saneblidze--Umble \cite{SaneblidzeUmble}.
 We shall call this diagonal the \emph{original $\SU$ diagonal} in the rest of the paper. 
 The first topological cellular diagonal of the permutahedra was defined in \cite{LaplanteAnfossi}, we shall call it the \emph{geometric $\LA$ diagonal}.
 Both of these families of diagonals are \emph{operadic}, \ie they respect the product structure on the faces of permutahedra (this property is called ``comultiplicativity" in \cite{SaneblidzeUmble}).
-More precisely, the algebraic structure encoded by the permutahedra is that of a homotopy associative permutad \cite{LodayRonco-permutads,Markl}.
+More precisely, the algebraic structure encoded by the permutahedra is that of homotopy associative permutad \cite{LodayRonco-permutads,Markl}.
 
 The toric varieties associated with the permutahedron are called Losev--Manin varieties, introduced in \cite{LosevManin}.
 At this level, the operadic structure is that of a reconnectad \cite{DotsenkoKeilthyLyskov}. 
