--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3899,12 +3899,12 @@ where we have aligned each element, of each diagonal, vertically with its dual e
 
 In this section, we show that the singleton $1$-shifts defining the operadic diagonal $\LAD$ or $\SUD$ define a lattice structure on the set of facets.
 More precisely, each $\SCP$ is the minimal element of a lattice isomorphic to a product of chains, where the partial order is given by shifts.
-We will discuss how this lattice is compatible with a generalised weak order, and latter we will use it to relate the cubical and shift definitions of the $\SUD$ diagonal in \cref{sec:Cubical}.
+We will discuss how this lattice is compatible with a generalised weak order\Guillaume{What is this generalized weak order? Where is it defined?}, and latter we will use it to relate the cubical and shift definitions of the $\SUD$ diagonal in \cref{sec:Cubical}.
 
 \begin{definition}
 Let $\sigma$ denote any one of the two ordered partitions in a $(2,n)$-partition tree.
-The \defn{right $\LA$ height} (\resp \defn{left $\LA$ height}) of $\rho \in [n]$ is the maximal value $r_\rho^\LA(\sigma)$ (\resp $l_\rho^\LA(\sigma)$) of the natural number $m \geq 1$ for which the right $m$-shift of $\rho$ (\resp the left $m$-shift of $\rho$) is path-admissible in the $\LA$ sense, or $0$ if there are no such $m$-shifts.
-The $\SU$ right and left $\SU$ heights are defined similarly. 
+The \defn{right height} (\resp \defn{left height}) of $\rho \in [n]$ for the $\LA$ diagonal is the maximal value $r_\rho^\LA(\sigma)$ (\resp $l_\rho^\LA(\sigma)$) of the natural number $m \geq 1$ for which the right $m$-shift of $\rho$ (\resp the left $m$-shift of $\rho$) is path-admissible in the $\LA$ sense, or $0$ if there are no such $m$-shifts.
+The right and left heights for the $\SU$ diagonal are defined similarly. 
 \end{definition}
 \Guillaume{Maybe we can think of a simpler notation?}
 
