--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3935,7 +3935,7 @@ From \cref{cor:SU-shift-preserves-max}, we know $m$-shifts conserve the maximal 
 As such, we can commute any two shift operators.
 \end{proof}
 
-Recall from \cref{subsec:inversions}
+Recall from \cref{subsec:inversions} that the inversions of an ordered $(2,n)$-partition tree are the pair of edges that intersect. 
 
 \begin{definition}
 The \defn{shift lattice} on the set of facets of the $\LA$ (\resp $\SU$) diagonal is the partial order given by inclusion of their inversion sets. 
